# healthcare-ai-ds-platform

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .env.example  main.py  pyproject.toml  run_tests.sh
backend/agents/: base.py  brief_parser_agent.py  chat_agent.py  doc_generator_agent.py  eda_agent.py  insight_agent.py  intent_extractor.py  model_selector_agent.py  plot_selector_agent.py  preprocessing_agent.py
backend/core/: audit.py  auth.py  config.py  database.py  events.py  json_utils.py  storage.py  strategy_mutator.py
backend/deliverables/: audit_log_export.py  base.py  data_quality_report.py  executive_summary.py  model_card.py  notebook_export.py  predictions_artifact.py  repro_manifest.py  risk_register.py  technical_report.py
backend/deliverables/templates/: data_quality_report.html  executive_summary.html  model_card.html  technical_report.html
backend/ml/: calibration.py  cleaner.py  drift.py  explainer.py  fairness.py  joiner.py  leakage_detector.py  plotter.py  predictor.py  profiler.py  similarity.py  stat_tests.py  threshold_optimizer.py  trainer.py  tuner.py
backend/models/: chat.py  dataset.py  decision.py  eda.py  job.py  project.py  run.py  strategy.py
backend/routers/: analysis.py  audit.py  chat.py  checkpoints.py  datasets.py  deliverables.py  joins.py  plots.py  predict.py  projects.py  results.py
backend/tasks/: analysis_task.py  batch_prediction_task.py  celery_app.py  dataset_plot_task.py  deliverable_task.py  drift_task.py  eda_task.py  fairness_task.py  plot_task.py  prediction_task.py  preprocessing_task.py  training_task.py  tuning_task.py
backend/tests/: conftest.py  test_analysis_rerun.py  test_audit.py  test_auth.py  test_base.py  test_brief_parser_agent.py  test_calibration.py  test_chat_agent.py  test_cleaner.py  test_datasets.py  test_deliverables.py  test_drift.py  test_eda_agent.py  test_eda_simulation.py  test_explainer.py  test_fairness.py  test_health.py  test_joiner.py  test_leakage_detector.py  test_medical_fixtures.py  test_model_selector_agent.py  test_notebook_export.py  test_predictor.py  test_preprocessing_agent.py  test_profiler.py  test_sse.py  test_stat_tests.py  test_strategy_mutator.py  test_threshold_optimizer.py  test_trainer.py
backend/tests/fixtures/: claims_triage.csv  credit_default.csv  diagnosis_triage.csv  disease_screening.csv  generate_fixtures.py  hantavirus_hps.csv  hantavirus_hps_inference.csv  housing.csv  icu_mortality.csv  lead_scoring.csv  telco_churn.csv  (+3 more)
backend/utils/: brief_extractor.py
(+116 files in other folders)
