[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-ds-platform-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "anthropic>=0.25",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3",
    "aiofiles>=23.2",
    "pandas>=2.1",
    "numpy>=1.26",
    "scipy>=1.12",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.3",
    "optuna>=3.6",
    "shap>=0.45",
    "faiss-cpu>=1.8",
    "joblib>=1.4",
    "openpyxl>=3.1",
    "pyarrow>=15.0",
    "weasyprint>=62",
    "jinja2>=3.1",
    "fairlearn>=0.10",
    "matplotlib>=3.8",
    "statsmodels>=0.14",
    "supabase>=2.4",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "pytest-mock>=3.12",
]

# ── pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Add parent directory to sys.path so `from backend.X import Y` resolves
# when running `cd backend && pytest`
pythonpath = [".."]
markers = ["integration: requires live Postgres + Redis (run with docker-compose up)"]

# ── ruff ─────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── mypy ─────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

# ── setuptools package discovery ──────────────────────────────────────────────
# The code imports everything as `backend.*` even though this pyproject lives
# inside backend/. Point discovery one level up so `pip install -e ".[dev]"`
# registers the single top-level `backend` package (not its sub-dirs as separate
# top-level packages, which is the auto-discovery error). This makes
# `uvicorn backend.main:app` / `celery -A backend.tasks.celery_app` importable
# from any working directory.
[tool.setuptools.packages.find]
where = [".."]
include = ["backend*"]
namespaces = false
